--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -93,7 +93,11 @@
     "# load trained model for test\n",
     "import os\n",
     "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/unfzD_SCARED_b3accu1_posetr_net_reloc3r_9D_OPTTranse01_ROTAng01_Loss_regTrMagWt0_regRotAngMagWt0_386to386rather4096_depthScratchDAM_motionDftFlow_allRegLoss_doubleB_loss2weight100_tanhandclampSample_deltaMax001/0918-212235/models/weights_4'\n",
-    "# traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredExcelSM_MonFast3r_trainedNfzD/1010-145110/models/weights_4'\n",
+    "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredExcelSM_MonFast3r_trainedNfzD/1010-145110/models/weights_4'\n",
+    "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD/1013-104014/models/weights_3'\n",
+    "trained_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD_dft_DAonly/1014-185504/models/weights_4'\n",
+    "trained_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD_learnedMskTrePx1_learnedlossR2Weight1_reproj2only/1014-173620/models/weights_4'\n",
+    "\n",
     "\n",
     "print('pose_model_type:', opts.pose_model_type)\n",
     "if opts.pose_model_type == \"separate_resnet\":\n",
@@ -326,7 +330,7 @@
     "\n",
     "        # if (self.epoch + 1) % self.opt.save_frequency == 0:\n",
     "        #     self.save_model()\n",
-    "        break\n",
+    "        # break\n",
     "    \n",
     "\n",
     "\n",
